# LedStripContoller

./: CMakeLists.txt  HomePage.qml  Main.qml  SettingsPage.qml  main.cpp  tcpclient.cpp  tcpclient.h
MyComponents/: SideButton.qml  ToggleButton.qml
